--- a/1-birthday-reminder/setup/src/index.css
+++ b/1-birthday-reminder/setup/src/index.css
@@ -3,7 +3,7 @@
 Variables
 ===============
 */
-
+/* :root is a pseudo-class which points to the top-level HTML element. */
 :root {
   /* dark shades of primary color*/
   --clr-primary-1: hsl(162, 61%, 89%);
@@ -59,7 +59,7 @@ Global Styles
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: var(--clr-pink);
+  background: linear-gradient(130deg, #359eff 8%, #3a00df 95%);
   color: var(--clr-grey-9);
   line-height: 1.5;
   font-size: 0.875rem;
